force-app/main/default/objects/sfpegList__mdt/sfpegList__mdt.object-meta.xml
<CustomObject>
    <description>Description of queries available for the sfpeg List components</description>
    <label>sfpegList</label>
    <pluralLabel>sfpegLists</pluralLabel>
</CustomObject>