force-app/main/default/objects/sfpegList__mdt/fields/BypassFLS__c.field-meta.xml
<CustomField>
    <fullName>BypassFLS__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag to bypass the FLS filtering in the SOQL result list (see Security.stripInaccessible())</description>
    <inlineHelpText>Flag to bypass the FLS filtering in the SOQL result list</inlineHelpText>
    <label>Bypass FLS?</label>
    <type>Checkbox</type>
</CustomField>