force-app/main/default/objects/sfpegList__mdt/fields/BypassSharing__c.field-meta.xml
<CustomField>
    <fullName>BypassSharing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag to execute the SOQL / SOSL query without sharing</description>
    <inlineHelpText>Flag to execute the SOQL / SOSL query without sharing</inlineHelpText>
    <label>Bypass Sharing?</label>
    <type>Checkbox</type>
</CustomField>