force-app/main/default/objects/sfpegList__mdt/fields/DisplayType__c.field-meta.xml
<CustomField>
    <fullName>DisplayType__c</fullName>
    <description>Type of display for which the configuration is prepared</description>
    <label>Display Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DataTable</fullName>
                <default>true</default>
                <label>DataTable</label>
            </value>
            <value>
                <fullName>TreeGrid</fullName>
            </value>
            <value>
                <fullName>CardList</fullName>
            </value>
            <value>
                <fullName>TileList</fullName>
            </value>
            <value>
                <fullName>Hidden</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>