force-app/main/default/objects/sfpegList__mdt/fields/DoPagination__c.field-meta.xml
<CustomField>
    <fullName>DoPagination__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do Pagination ?</label>
    <type>Checkbox</type>
</CustomField>