force-app/main/default/objects/sfpegList__mdt/fields/FlattenResults__c.field-meta.xml
<CustomField>
    <fullName>FlattenResults__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Flatten Results ?</label>
    <type>Checkbox</type>
</CustomField>