force-app/main/default/objects/sfpegList__mdt/fields/Permission__c.field-meta.xml
<CustomField>
    <fullName>Permission__c</fullName>
    <description>Custom Permission Developer Name controlling access to the Query results.</description>
    <label>Permission</label>
    <length>80</length>
    <type>Text</type>
</CustomField>