force-app/main/default/objects/sfpegList__mdt/fields/QueryInput__c.field-meta.xml
<CustomField>
    <fullName>QueryInput__c</fullName>
    <description>Contextual input required as a stringified JSON list of fields (with RCD, USR, CTX... prefix)</description>
    <label>Query Input</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>