force-app/main/default/objects/sfpegList__mdt/fields/QueryOrderBy__c.field-meta.xml
<CustomField>
    <fullName>QueryOrderBy__c</fullName>
    <description>Field API Name for SOQL OrderBy Statement (when pagination is used)</description>
    <inlineHelpText>Field API Name for SOQL OrderBy Statement (when pagination is used)</inlineHelpText>
    <label>Query OrderBy Field</label>
    <length>25</length>
    <type>Text</type>
</CustomField>