force-app/main/default/objects/sfpegList__mdt/fields/QuerySOQL__c.field-meta.xml
<CustomField>
    <fullName>QuerySOQL__c</fullName>
    <description>When using SOQL query, query details with {{{XXX.xxxx}}} merge tokens corresponding to the Input parameter.</description>
    <label>Query SOQL</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>