force-app/main/default/objects/sfpegList__mdt/fields/QueryType__c.field-meta.xml
<CustomField>
    <fullName>QueryType__c</fullName>
    <description>Type of method to fetch data</description>
    <label>Query Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SOQL</fullName>
                <default>true</default>
                <label>SOQL</label>
            </value>
            <value>
                <fullName>Apex</fullName>
            </value>
            <value>
                <fullName>SOSL</fullName>
            </value>
            <!--
            <value>
                <fullName>SAQL</fullName>
            </value>
            -->
        </valueSetDefinition>
    </valueSet>
</CustomField>