force-app/main/default/objects/sfpegList__mdt/fields/RowActions__c.field-meta.xml
<CustomField>
    <fullName>RowActions__c</fullName>
    <defaultValue>&apos;[{&quot;name&quot;:&quot;open&quot;,&quot;action&quot;:{&quot;type&quot;:&quot;open&quot;}},{&quot;name&quot;:&quot;edit&quot;,&quot;action&quot;:{&quot;type&quot;:&quot;edit&quot;}}]&apos;</defaultValue>
    <description>JSON configuration of the Actions available on each Row</description>
    <label>Row Actions</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>