force-app/main/default/objects/sfpegList__mdt/listViews/ALL_Lists.listView-meta.xml
<ListView>
    <fullName>ALL_Lists</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Scope__c</columns>
    <columns>QueryType__c</columns>
    <columns>QueryClass__c</columns>
    <columns>DisplayType__c</columns>
    <columns>DoPagination__c</columns>
    <columns>RowActions__c</columns>
    <filterScope>Everything</filterScope>
    <label>ALL Lists</label>
    <language>en_US</language>
</ListView>